1/27/14 delete unused optional arg from Solute.createCustom
1/27/14 use same location for water faucet in 'Basics' and 'Solutions' screens
1/27/14 use same location and size for beakers in all 3 screens, ensure that dropper is above beaker
1/27/14 make it easier to adjust vertical spacing of zoom buttons and Log/Linear switch
1/27/14 add vertical line between graph and Linear/Log switch
1/27/14 use water color for custom solution
1/27/14 integrate new 'Solutions' icon, use old 'Solutions' icon for 'Basics' screen
# 1.0.0-dev.7 1/23/14
1/23/14 add option to connect probe to left|center|right of pH meter
1/23/14 RatioNode: reduce lots of Vector2 allocations by computing x and y coordinates separately
1/23/14 fix Reset All so that it fills 0.5L
1/23/14 center controls under beaker, because it looks better and we have room for i18n now
1/23/14 move linear graph to Solutions screen
1/23/14 rounded corners on pH probe tip
1/23/14 add a probe to pH meter that extends to bottom of beaker
1/23/14 combine SolutionsPHMeterNode and CustomPHMeterNode into a single meter that optionally allows you to change pH
1/23/14 Custom: make beaker same size and location as Solutions screen
1/23/14 Solutions: make beaker wider, scale up 'Molecule count' feature
1/23/14 Solutions: remove code related to aligning scales of graph and pH meter, since the pH meter no longer has a scale
1/23/14 Solutions: remove scale from pH meter
1/23/14 revert: Custom: don't collapse meter when collapse button is pressed, just hide pH picker
1/23/14 Custom: remove dropper and drain, use a fixed volume of solution
1/23/14 Custom: don't collapse meter when collapse button is pressed, just hide pH picker
1/23/14 fix: initial graph layout got hosed by non-zero initial volume
1/23/14 Basics: auto-fill with a specified volume when a solute is selected. Set this to 0L for ph-scale-basics, 0.5L for ph-scale.
1/23/14 fix: pH picker doesn't always disable properly at end of range, causes pH to exceed range