@@ -27,7 +27,7 @@ define( function( require ) {
     // shape and location
     var updateShapeAndLocation = function() {
       // path
-      if ( dropper.onProperty.get() && !dropper.emptyProperty.get() ) {
+      if ( dropper.flowRateProperty.get() > 0 ) {
         thisNode.setRect( -tipWidth / 2, 0, tipWidth, beaker.location.y - dropper.locationProperty.get().y );
       }
       else {
@@ -37,8 +37,7 @@ define( function( require ) {
       thisNode.translation = mvt.modelToViewPosition( dropper.locationProperty.get() );
     };
     dropper.locationProperty.link( updateShapeAndLocation );
-    dropper.onProperty.link( updateShapeAndLocation );
-    dropper.emptyProperty.link( updateShapeAndLocation );
+    dropper.flowRateProperty.link( updateShapeAndLocation );
 
     // set color to match solute
     dropper.soluteProperty.link( function( solute ) {
